# Calculator

./: .gitignore  README.md  angular.json  capacitor.config.json  ionic.config.json  karma.conf.js  package-lock.json  package.json  tsconfig.spec.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
e2e/src/: app.e2e-spec.ts
resources/: resources.js
src/: global.scss  index.html  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  global-vars.service.spec.ts  global-vars.service.ts  storage.service.ts
src/app/calculator/basic-calculator/: basic-calculator.component.html  basic-calculator.component.scss  basic-calculator.component.ts  basic-calculator.service.ts
src/app/calculator/calculator-menu/: calculator-menu.component.html  (+3 more)
src/app/calculator/calculator-menu-modal/: calculator-menu-modal.component.html  calculator-menu-modal.component.scss  calculator-menu-modal.component.spec.ts  calculator-menu-modal.component.ts
src/app/calculator/math-evaluator/: Cargo.toml  math-evaluator.service.spec.ts  math-evaluator.service.ts  mathEvaluator.service.ts
src/app/calculator/math-evaluator/src/: lib.rs
src/app/common/: common-components.module.ts
src/app/models/: basic-calculator-custom-styles.interface.ts  button.interface.ts  calculator-custom-styles.interface.ts  canvas-context-styles.interface.ts  length-unit.interface.ts  unit.interface.ts
src/theme/: variables.scss
(+196 files in other folders)
